# cs-bindgen

./: Cargo.toml  README.md  export.bat  run.bat
.github/workflows/: build-and-test.yml
cs-bindgen/: Cargo.toml
cs-bindgen-cli/: Cargo.toml
cs-bindgen-cli/src/: generate.rs  load_decl.rs  main.rs
cs-bindgen-cli/src/generate/: binding.rs  class.rs  enumeration.rs  func.rs  strukt.rs
cs-bindgen-macro/: Cargo.toml
cs-bindgen-macro/src/: enumeration.rs  func.rs  handle.rs  lib.rs  strukt.rs  value.rs
cs-bindgen-shared/: Cargo.toml
cs-bindgen-shared/src/: abi.rs  arg.rs  bindgen_fn.rs  bindgen_impl.rs  bindgen_struct.rs  item.rs  lib.rs  meta.rs  method.rs  primitive.rs  ret.rs
cs-bindgen-shared/src/meta/: export.rs  func.rs  method.rs  strct.rs
cs-bindgen-shared/src/schema/: decode.rs  encode.rs
cs-bindgen/src/: abi.rs  exports.rs  lib.rs
cs-bindgen/tests/: collections.rs  derive.rs  manual_derive.rs  opaque_handle_type.rs  simple_enum_derive.rs
integration-tests/: .gitignore  Cargo.toml
integration-tests/TestRunner/: .gitignore  Collections.cs  EnumTests.cs  GreetTests.cs  Structs.cs  TestRunner.csproj  UnitTest1.cs  ValueTypes.cs
integration-tests/builder/: Cargo.toml
integration-tests/builder/src/: main.rs
integration-tests/src/: collections.rs  copy_types.rs  data_enum.rs  function.rs  lib.rs  main.rs  method.rs  name_collision.rs  simple_enum.rs  structs.rs
mahjong/: Cargo.toml
mahjong-wasm/: Cargo.toml
mahjong-wasm/src/: lib.rs
mahjong/src/: lib.rs
schematic/: Cargo.toml  README.md
schematic/src/: decode.rs  encode.rs  lib.rs  primitive.rs  schema.rs  schema_encoder.rs
schematic/tests/: type_name.rs
src/: lib.rs
