[package]
name = "cs-bindgen-cli"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[dependencies]
cs-bindgen-shared = { version = "0.1.0", path = "../cs-bindgen-shared" }
heck = "0.3.1"
proc-macro2 = "1.0.8"
quote = "1.0.2"
serde_json = "1.0.45"
snafu = "0.6.2"
structopt = "0.3.8"
syn = { version = "1.0.14", features = ["full"] }
wasmtime = "0.9.0"

# Only required in order to propagate errors from wasmtime.
#
# TODO: Remove this dependency, either by having wasmtime re-export the `Error` type
# or by switching off wasmtime entirely.
anyhow = "1.0.26"
