[package]
name = "cs-bindgen-cli"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[dependencies]
cs-bindgen-shared = { version = "0.1.0", path = "../cs-bindgen-shared" }
extend = "0.1.1"
failure = "0.1.6"
heck = "0.3.1"
lazy_static = "1.4.0"
parity-wasm = "0.41.0"
proc-macro2 = "1.0.8"
quote = "1.0.6"
serde_json = "1.0.45"
structopt = "0.3.8"
syn = { version = "1.0.14", features = ["full"] }
wasmi = "0.6.2"
