[package]
name = "cs-bindgen-macro"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.8"
quote = "1.0.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
syn = { version = "1.0.14", features = ["full"] }
