[package]
name = "cs-bindgen-shared"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.99.2"
proc-macro2 = "1.0.8"
quote = "1.0.2"
schematic = { version = "0.1.0", path = "../schematic" }
serde = { version = "1.0.104", features = ["derive"] }
syn = { version = "1.0.14", features = ["full"] }
