[package]
name = "cs-bindgen-shared"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.99.2"
schematic = { version = "0.1.0", git = "https://github.com/randomPoison/schematic", rev = "a757089" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
