[package]
name = "cs-bindgen"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs-bindgen-macro = { version = "0.1", path = "../cs-bindgen-macro" }
cs-bindgen-shared = { version = "0.1", path = "../cs-bindgen-shared" }
strum = "0.17.1"

[dev-dependencies]
strum = { version = "0.17.1", features = ["derive"] }
